objects/Service_Request_Product__c.object
<CustomObject>
    <description>Object that ties Plant Products to Service Requests</description>
    <fields>
        <fullName>Credit_Issued_Doc__c</fullName>
        <description>Credit Issued Doc #</description>
        <label>Credit Issued Doc #</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Care_Group_Email__c</fullName>
        <description>Customer Care Group Email from Shipping Plant</description>
        <label>Customer Care Group Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Customer_Operations_Manager_Email_Manuf__c</fullName>
        <description>Email for Customer Operations Manager on the Manufacturing Plant</description>
        <label>Customer Operations Manager Email Manuf</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Customer_Operations_Manager_Email_Ship__c</fullName>
        <description>Email for Customer Operations Manager on the Shipping Plant</description>
        <label>Customer Operations Manager Email Ship</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Date_Product_Returned__c</fullName>
        <label>Date Product Returned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Does_Lot_match_RGA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Does Lot match RGA?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Does_Product_Quantity_match_RGA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Does Product &amp; Quantity match RGA?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>If_Cross_Docked_Select_Location__c</fullName>
        <description>When cross docked, select location</description>
        <label>If Cross Docked, Select Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FLDC</fullName>
                </value>
                <value>
                    <fullName>FWDC</fullName>
                </value>
                <value>
                    <fullName>HARR</fullName>
                </value>
                <value>
                    <fullName>MHDC</fullName>
                </value>
                <value>
                    <fullName>MILF</fullName>
                </value>
                <value>
                    <fullName>RIDC</fullName>
                </value>
                <value>
                    <fullName>RITD</fullName>
                </value>
                <value>
                    <fullName>X</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_No_Note_Changes__c</fullName>
        <label>If No, Note Changes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_No_Note_Lot__c</fullName>
        <label>If No, Note Lot</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Number_Id__c</fullName>
        <formula>Product__r.Item_Number_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Number Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_Number__c</fullName>
        <description>Item number of the Product selected</description>
        <formula>Product__r.Item_2Nd_Item_Number__c</formula>
        <label>Item Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lot_Code__c</fullName>
        <inlineHelpText>include the ship date here if it is bulk shipment</inlineHelpText>
        <label>Lot Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturing_Plant_Co_Man__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if Manufacturing Plant is a Co-Man</description>
        <label>Manufacturing Plant Co-Man?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manufacturing_Plant_Unknown__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the Manufacturing Plant for the Service Request Product is unknown</description>
        <label>Manufacturing Plant Unknown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manufacturing_Plant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manufacturing Plant</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Branch__c.Customer_Ops_Plant_Type__c</field>
                <operation>equals</operation>
                <value>Manufacturing, Co-Man, Both, Out of Scope</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Branch__c</referenceTo>
        <relationshipLabel>Service Request Products</relationshipLabel>
        <relationshipName>Service_Request_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Net_Weight_Lbs__c</fullName>
        <description>Field to capture Net Weight Lbs of the Product</description>
        <formula>Product__r.Net_Weight_Lbs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Weight Lbs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes_on_Condition__c</fullName>
        <label>Notes on Condition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Pallets__c</fullName>
        <description>Number of pallets with the product being returned</description>
        <label># of Pallets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nutritionist_Email_Field__c</fullName>
        <description>Nutritionist Email for species affected</description>
        <label>Nutritionist Email Field</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Plant_Manager_Email_Manufacturing__c</fullName>
        <description>Email for Plant Manger on the Manufacturing Plant</description>
        <label>Plant Manager Email Manufacturing</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Plant_Manager_Email_Shipping__c</fullName>
        <description>Email for Plant Manager on the Shipping Plant</description>
        <label>Plant Manager Email Shipping</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Plant_Supervisor_Email_Manufacturing__c</fullName>
        <description>Email for Plant Supervisor on the Manufacturing Plant</description>
        <label>Plant Supervisor Email Manufacturing</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Plant_Supervisor_Email_Shipping__c</fullName>
        <description>Email  for Plant Supervisor on the Shipping Plant</description>
        <label>Plant Supervisor Email Shipping</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <description>Name and ID of the product selected</description>
        <formula>Product__r.Name</formula>
        <label>Product Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Form__c</fullName>
        <formula>Product__r.Product_Form_Desc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Form</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Formula_Code__c</fullName>
        <formula>Product__r.Formula_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Formula Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Packaging_Type_Desc__c</fullName>
        <description>Field to capture Product Packaging Desc from the Product</description>
        <formula>Product__r.Product_Package_Type_Desc__c</formula>
        <label>Product Packaging Type Desc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Returned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product Returned?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Service_Request_Products_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purina_Salesperson_Email_Field__c</fullName>
        <description>Purina Sales Person email for Potential Liability Service Requests</description>
        <label>Purina Salesperson Email Field</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Quality_Manager_Email_Manufacturing__c</fullName>
        <description>Email  for Quality Manager on the Manufacturing Plant</description>
        <label>Quality Manager Email Manufacturing</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Quality_Manager_Email_Shipping__c</fullName>
        <description>Email  for Quality Manager on the Shipping Plant</description>
        <label>Quality Manager Email Shipping</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Quality_Supervisor_Email_Manufacturing__c</fullName>
        <description>Email  for Quality Supervisor on the Manufacturing Plant</description>
        <label>Quality Supervisor Email Manufacturing</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Quality_Supervisor_Email_Shipping__c</fullName>
        <description>Email  for Quality Supervisor on the Shipping Plant</description>
        <label>Quality Supervisor Email Shipping</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Return_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Return Requested?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Return_to_Stock_Indicate_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Location the Stock is to be returned to</description>
        <label>Return to Stock? (Indicate Location)</label>
        <referenceTo>Branch__c</referenceTo>
        <relationshipLabel>Service Request Products (Return to Stock? (Indicate Location))</relationshipLabel>
        <relationshipName>Service_Request_Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Request__c</fullName>
        <label>Service Request</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Service Request Products</relationshipLabel>
        <relationshipName>Service_Request_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Shortage_Overage__c</fullName>
        <description>Field captures whether there is a shortage or overage of the product.</description>
        <label>Shortage/Overage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Shortage</fullName>
                </value>
                <value>
                    <fullName>Overage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Specie__c</fullName>
        <formula>Product__r.Level_3_Desc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Specie</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Weight__c</fullName>
        <description>Total Weight of the product - net weight x quantity</description>
        <label>Total Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UoM_formula__c</fullName>
        <formula>Product__r.Unit_Of_Measure_Primary__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UoM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>dollar value of the returned product</description>
        <label>$ Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Veterinarian_Email_Field__c</fullName>
        <description>Email for Veterinarian of affected species</description>
        <label>Veterinarian Email Field</label>
        <type>Email</type>
    </fields>
    <label>Service Request Product</label>
    <nameField>
        <displayFormat>SRP-{0000}</displayFormat>
        <label>SR Product #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Request Products</pluralLabel>
    <recordTypes>
        <fullName>Customer_Ops_SR_Product</fullName>
        <active>true</active>
        <label>Customer Ops-SR Product</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Manufacturing_Plant_Required</fullName>
        <active>true</active>
        <description>If &apos;Manufacturing Plant Unknown&apos; isn&apos;t checked, then the Shipping Plant is required</description>
        <errorConditionFormula>Manufacturing_Plant_Unknown__c = FALSE 
&amp;&amp; 
ISBLANK( Manufacturing_Plant__c) 
&amp;&amp;  
RecordType.Name = &quot;Customer Ops-SR Product&quot;
&amp;&amp;
ISPICKVAL(Service_Request__r.Potential_Product_Liability__c, &quot;No&quot;)</errorConditionFormula>
        <errorDisplayField>Manufacturing_Plant__c</errorDisplayField>
        <errorMessage>Manufacturing Plant required</errorMessage>
    </validationRules>
</CustomObject>